@@ -7,8 +7,8 @@ if False:  # MYPY
 
 _package_data = dict(
     full_package_name='ruamel.yaml',
-    version_info=(0, 15, 50),
-    __version__='0.15.50',
+    version_info=(0, 15, 51),
+    __version__='0.15.51',
     author='Anthon van der Neut',
     author_email='a.van.der.neut@ruamel.eu',
     description='ruamel.yaml is a YAML parser/emitter that supports roundtrip preservation of comments, seq/map flow style, and map key order',  # NOQA
@@ -69,7 +69,7 @@ _package_data = dict(
         deps=u'ruamel.std.pathlib',
         fl8excl=u'_test/lib',
     ),
-    rtfd=47359,
+    rtfd='yaml',
 )  # type: Dict[Any, Any]
 
 
