@@ -1,5 +1,5 @@
 [tox]
-# toworkdir = /data1/DATA/tox/ruamel.yaml 
+# toxworkdir = /data1/DATA/tox/ruamel.yaml 
 envlist = cs,py37,py27,py36,py35,py34,pypy,py27m
 
 [testenv]
